crates/context-macro/tests/constraints/missing_associated_token_pogram.fail.stderr
error: One constraint requires including the `Program<AtaTokenProgram>` account.
  --> tests/constraints/missing_associated_token_pogram.fail.rs:20:1
   |
20 | pub struct InitContext {
   | ^^^
